# xiegu_x6200_stuff_x6100

./: CHEATSHEET.md  README.md  x6100_BT.md
bt_audio_listening/: README.md
bt_audio_listening/usr/share/support/: userapp
usb_audio_full_duplex/: CMakeLists.txt  PEAK_main.c  PTT_main.c  README.md  SINUS_main.c  SWITCH_PEAK_main.c  build.sh  main.c
usb_audio_full_duplex/BIN_FOR_TARGET/: PEAK  PTT  SINUS  SWITCH_PEAK  SWITCH_PTT
usb_audio_listening/: README.md
usb_audio_listening/etc/udev/rules.d/: 99-usbaudio-gst.rules
